syntax = "proto3";

package ledger.communication.grpc;

import "commons.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
    flat_package: true
    lenses: true
    retain_source_code_info: false
    no_default_values_in_constructor: false
    preserve_unknown_fields: false
};


// The ledger service definition.
service Ledger {
    rpc OpenAccount (OpenAccountRequest) returns (OpenAccountReply) {}
    rpc AuthorizePayment (AuthorizeRequest) returns (AuthorizeReply) {}
}

// The request message containing the user's name.
message OpenAccountRequest {
    string accountId = 1 [(scalapb.field).type = "accounts.AccountId"];
}

// The response message containing the greetings
message OpenAccountReply {
    string message = 1;
}

// The request message containing the user's name.
message AuthorizeRequest {
    string transactionId = 1 [(scalapb.field).type = "transactions.TransactionId"];
    string from = 2 [(scalapb.field).type = "accounts.AccountId"];
    string to = 3 [(scalapb.field).type = "accounts.AccountId"];
    stem.commons.BigDecimal amount = 4 [(scalapb.field).no_box = true];
 }

// The response message containing the greetings
message AuthorizeReply {
    string message = 1;
}